<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:padding="8dp"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<TextView
		android:id="@+id/mainFragmentTitle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textAlignment="center"
		android:textSize="18sp"
		android:textStyle="bold"
		android:text="@string/main_fragment_title"/>

	<TextView
		android:id="@+id/mainFragmentStatus"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:textAlignment="center"
		android:textSize="16sp"
		android:text="@string/main_fragment_status"/>

	<Button
		android:id="@+id/mainFragmentButtonGet"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/main_fragment_button_get"/>

	<Button
		android:id="@+id/mainFragmentButtonList"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/main_fragment_button_list"/>

	<Button
		android:id="@+id/mainFragmentbuttonCommit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="Commit"/>

</LinearLayout>
