<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<ImageView
		android:id="@+id/fragment_about_logo"
		android:layout_width="200dp"
		android:layout_height="200dp"
		android:scaleType="fitCenter"
		android:adjustViewBounds="true"
		android:layout_gravity="center_horizontal"
		android:layout_margin="8dp"
		android:src="@drawable/fopds_logo_foreground"/>

	<TextView
		android:id="@+id/fragment_about_app_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:textSize="24sp"
		android:text="@string/application_name"/>

	<TextView
		android:id="@+id/fragment_about_app_version"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:textSize="20sp"/>

	<TextView
		android:id="@+id/fragment_about_site"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="16dp"
		android:textSize="20sp"
		android:autoLink="web"
		android:clickable="true"
		android:linksClickable="true"
		android:text="@string/application_site"/>

	<TextView
		android:id="@+id/fragment_about_copyright"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="8dp"
		android:textSize="20sp"
		android:text="@string/copyright"/>





</LinearLayout>
